--- a/TransLite/TransLite/Info.plist
+++ b/TransLite/TransLite/Info.plist
@@ -11,7 +11,7 @@
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
-    <string>TranslateBar</string>
+    <string>TransLite</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
