--- a/TransLite/project.yml
+++ b/TransLite/project.yml
@@ -1,6 +1,6 @@
-name: TranslateBar
+name: TransLite
 options:
-  bundleIdPrefix: com.translatebar
+  bundleIdPrefix: com.translite
   deploymentTarget:
     macOS: "13.0"
   xcodeVersion: "15.0"
@@ -16,19 +16,19 @@ settings:
     ENABLE_HARDENED_RUNTIME: NO
 
 targets:
-  TranslateBar:
+  TransLite:
     type: application
     platform: macOS
     sources:
-      - path: TranslateBar
+      - path: TransLite
         excludes:
           - "**/*.entitlements"
     settings:
       base:
-        PRODUCT_BUNDLE_IDENTIFIER: com.translatebar.app
-        INFOPLIST_FILE: TranslateBar/Info.plist
-        CODE_SIGN_ENTITLEMENTS: TranslateBar/TranslateBar.entitlements
-        PRODUCT_NAME: TranslateBar
+        PRODUCT_BUNDLE_IDENTIFIER: com.translite.app
+        INFOPLIST_FILE: TransLite/Info.plist
+        CODE_SIGN_ENTITLEMENTS: TransLite/TransLite.entitlements
+        PRODUCT_NAME: TransLite
         ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
         COMBINE_HIDPI_IMAGES: YES
         LD_RUNPATH_SEARCH_PATHS:
