--- a/TranslateBar/project.yml
+++ b/TranslateBar/project.yml
@@ -1,6 +1,6 @@
-name: TransLite
+name: TranslateBar
 options:
-  bundleIdPrefix: com.translite
+  bundleIdPrefix: com.translatebar
   deploymentTarget:
     macOS: "13.0"
   xcodeVersion: "15.0"
@@ -16,19 +16,19 @@ settings:
     ENABLE_HARDENED_RUNTIME: NO
 
 targets:
-  TransLite:
+  TranslateBar:
     type: application
     platform: macOS
     sources:
-      - path: TransLite
+      - path: TranslateBar
         excludes:
           - "**/*.entitlements"
     settings:
       base:
-        PRODUCT_BUNDLE_IDENTIFIER: com.translite.app
-        INFOPLIST_FILE: TransLite/Info.plist
-        CODE_SIGN_ENTITLEMENTS: TransLite/TransLite.entitlements
-        PRODUCT_NAME: TransLite
+        PRODUCT_BUNDLE_IDENTIFIER: com.translatebar.app
+        INFOPLIST_FILE: TranslateBar/Info.plist
+        CODE_SIGN_ENTITLEMENTS: TranslateBar/TranslateBar.entitlements
+        PRODUCT_NAME: TranslateBar
         ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
         COMBINE_HIDPI_IMAGES: YES
         LD_RUNPATH_SEARCH_PATHS:
