--- a/TranslateBar/project.yml
+++ b/TranslateBar/project.yml
@@ -28,7 +28,7 @@ targets:
         PRODUCT_BUNDLE_IDENTIFIER: com.translatebar.app
         INFOPLIST_FILE: TranslateBar/Info.plist
         CODE_SIGN_ENTITLEMENTS: TranslateBar/TranslateBar.entitlements
-        PRODUCT_NAME: TranslateBar
+        PRODUCT_NAME: TransLite
         ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
         COMBINE_HIDPI_IMAGES: YES
         LD_RUNPATH_SEARCH_PATHS:
