--- a/TransLite/project.yml
+++ b/TransLite/project.yml
@@ -16,18 +16,18 @@ settings:
     ENABLE_HARDENED_RUNTIME: NO
 
 targets:
-  TranslateBar:
+  TransLite:
     type: application
     platform: macOS
     sources:
-      - path: TranslateBar
+      - path: TransLite
         excludes:
           - "**/*.entitlements"
     settings:
       base:
         PRODUCT_BUNDLE_IDENTIFIER: com.translite.app
-        INFOPLIST_FILE: TranslateBar/Info.plist
-        CODE_SIGN_ENTITLEMENTS: TranslateBar/TranslateBar.entitlements
+        INFOPLIST_FILE: TransLite/Info.plist
+        CODE_SIGN_ENTITLEMENTS: TransLite/TransLite.entitlements
         PRODUCT_NAME: TransLite
         ASSETCATALOG_COMPILER_APPICON_NAME: AppIcon
         COMBINE_HIDPI_IMAGES: YES
