Add Sparkle for auto-updates
- Add Sparkle 2.x dependency via SPM
- Configure SUFeedURL and EdDSA public key in Info.plist
- Initialize SPUStandardUpdaterController in AppDelegate
- Add appcast.xml for update feed
- Add create-release.sh script for easy releases

--- a/TransLite/TransLite/Info.plist
+++ b/TransLite/TransLite/Info.plist
@@ -24,5 +24,13 @@
     <true/>
     <key>NSHumanReadableCopyright</key>
     <string>Copyright 2024. All rights reserved.</string>
+
+    <!-- Sparkle Configuration -->
+    <key>SUFeedURL</key>
+    <string>https://raw.githubusercontent.com/davizgarzia/TransLite/main/appcast.xml</string>
+    <key>SUPublicEDKey</key>
+    <string>J0iGisQPPA0A4O6OUTmL0CdUZp0B9I+q3U/l50AaCQk=</string>
+    <key>SUEnableAutomaticChecks</key>
+    <true/>
 </dict>
 </plist>
