--- a/TransLite/project.yml
+++ b/TransLite/project.yml
@@ -13,12 +13,13 @@ packages:
 
 settings:
   base:
-    MARKETING_VERSION: "1.0"
-    CURRENT_PROJECT_VERSION: "1"
+    MARKETING_VERSION: "1.0.2"
+    CURRENT_PROJECT_VERSION: "3"
     SWIFT_VERSION: "5.9"
     CODE_SIGN_STYLE: Manual
-    CODE_SIGN_IDENTITY: "-"
-    ENABLE_HARDENED_RUNTIME: NO
+    CODE_SIGN_IDENTITY: "0FCEEAA4861A3809015D60D8BD083B396BD79016"
+    DEVELOPMENT_TEAM: 2DBHSD6G6F
+    ENABLE_HARDENED_RUNTIME: YES
 
 targets:
   TransLite:
